<resources>
    <string name="app_name">My Dinner</string>
    <string name="login_username">Prisijungimo vardas</string>
    <string name="login_password">Slaptažodis</string>
    <string name="login_submit">Prisijungti</string>
    <string name="login_register">Registruotis</string>
    <string name="login_rememberme">Prisiminti mane</string>
    <string name="login_invalid_credentials">Klaidingai įvestas prisijungimo vardas arba slaptažodis</string>
    <string name="register_registration">Registracija</string>
    <string name="register_email">El. paštas</string>
    <string name="register_instructions">Užpildykite registracijos formą. Įveskite prisijungimo vardą, el. pašto adresą ir susigalvotą slaptažodį</string>
    <string name="register_invalid_username">Prisijungimo vardas turi būti sudarytas iš 3-20 raidžių</string>
    <string name="register_invalid_password">Slaptažodį turi būti sudarytas iš 5-20 simbolių (raidžių, skaičių bei .!@_)</string>
    <string name="register_ivalid_email">El. pašto adresą turi sudaryti nuo 10 iki 50 simbolių</string>
    <string name="register_success">Registracija sėkminga</string>
    <string name="register_user_exists">Toks vartotojas jau egzistuoja</string>
    <string name="register_failed">Registacija nepavyko, bandykite dar kartą</string>
    <string name="search">Paieška</string>
    <string name="search_add_dinner">Pridėti pietus</string>
    <string name="add_dinner">Pietų pridėjimas</string>
    <string name="add_dinner_instructions">Užpildykite naujų pietų pridėjimo formą</string>
    <string name="add_dinner_type">Patiekalo tipas</string>
    <string name="dish_type_error">Pažymėkite patiekalo tipą</string>
    <string name="dinner_type_soup">Sriuba</string>
    <string name="dinner_type_main">Pagrindinis</string>
    <string name="dinner_type_salad">Salotos</string>
    <string name="add_dinner_name">Patiekalo pavadinimas</string>
    <string name="dish_name_error">Įveskite patiekalo pavadinimą</string>
    <string name="add_dinner_price">Kaina</string>
    <string name="dinner_price_error">Įveskite kainą</string>
    <string name="add_dinner_delivery">Pristatymas</string>
    <string name="radio_yes">Taip</string>
    <string name="radio_no">Ne</string>
    <string name="add_dinner_payment">Atsiskaitymo būdas</string>
    <string-array name="payment_type">
        <item>Kortelė</item>
        <item>Bankinis pavedimas</item>
        <item>Grynieji</item>
    </string-array>
    <string name="dinner_saved_success">Įrašas buvo išsaugotas</string>
    <string name="dinner_save_failed">Įrašo išsaugoti nepavyko</string>
</resources>
