<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewDinnerActivity"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dinner"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:textSize="20pt"
            android:textStyle="bold"
            android:textAllCaps="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_dinner_instructions"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_dinner_type"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginLeft="8dp"
            />

        <CheckBox
            android:id="@+id/check_soup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinner_type_soup"/>

        <CheckBox
            android:id="@+id/check_main_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinner_type_main"/>

        <CheckBox
            android:id="@+id/check_salad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinner_type_salad"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/dinner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_dinner_name"
            android:inputType="text"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/dinner_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_dinner_price"
            android:inputType="numberDecimal"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_dinner_delivery"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginLeft="8dp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <RadioGroup
            android:id="@+id/radio_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_deliver_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_yes"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/radio_delivery_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_no"
                />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_dinner_payment"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginLeft="8dp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <Spinner
            android:id="@+id/payment_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/payment_type"
            android:prompt="@string/add_dinner_payment"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <Button
            android:id="@+id/add_dinner_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_add_dinner"
            android:textColorHint="@color/colorPrimaryDark"
            android:background="@color/colorRegister"
            android:layout_margin="5dp"
            />

    </LinearLayout>
</ScrollView>