<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".RegisterActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_registration"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:textSize="20pt"
        android:textStyle="bold"
        android:textAllCaps="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_instructions"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:inputType="text"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_register"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@color/colorRegister"
        android:layout_margin="5dp"
        />

</LinearLayout>