<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Dinner"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:textSize="25pt"
        android:textStyle="bold"
        android:textAllCaps="true"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:padding="20dp"
        android:src="@drawable/logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:inputType="text"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_rememberme"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="2">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_submit"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@color/colorPrimary"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_register"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@color/colorRegister"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"/>

</LinearLayout>


</LinearLayout>